# Scarlett-G

./: .gitmodules  CMakeLists.txt  base_params.txt  log_browser.py  params.txt  params_train_2p1_50games.txt  test_commands.txt  weird_moves.txt
include/: hashmap.hpp  history_table.hpp  human_player.hpp  killer_move_table.hpp  opening_book.hpp  piece_square_tables.hpp  player.hpp  pv_table.hpp  scarlett_core.hpp  scarlett_trainer.hpp  search_logger.hpp  simple_mmab.hpp  thc.h  trainer.hpp  transposition_table.hpp  utils.hpp
src/: demo.cpp  human_player.cpp  main.cpp  scarlett_core.cpp  scarlett_trainer.cpp  simple_mmab.cpp  thc.cpp  trainer.cpp
tools/pgn_converter/: CMakeLists.txt
tools/pgn_converter/include/: pgn_to_coordinates_converter.hpp
tools/pgn_converter/src/: pgn_to_coordinates_converter.cpp
